syntax = "proto3";

package client;
option csharp_namespace = "Calculadora.Client.Protos.Message";

message ValoresRequest {
	double valor1 = 1;
	double valor2 = 2;
}

message ResultadoResponse {
	string valor = 1;
}